<resources>
    <string name="app_name">FoodFeeder</string>
    <string name="food_feeder"><u>Food Feeder</u></string>
    <string name="welcome">Welcome !!</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_up">Register</string>
    <string name="login">Login</string>
    <string name="enter_your_password">Password here</string>
    <string name="enter_your_email">Mobile Number here</string>
    <string name="MySharedP">MySharedP</string>
    <string name="vedansh_bhardwaj">Vedansh Bhardwaj</string>
    <string name="Open_Drawer">Open Drawer</string>
    <string name="Close_Drawer">Close Drawer</string>
    <string name="rs">\u20B9</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register Yourself</string>
    <string name="name_min_3_characters">Name (min 3 characters)</string>
    <string name="e_mail_adress">E-mail adress</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="create_password_min_4_characters">Create Password (min 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="generating_otp">Generating OTP</string>
</resources>