<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/logo2" />

    <EditText
        android:id="@+id/etnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_theme"
        android:padding="4dp"
        android:hint="@string/enter_your_email"
        android:drawableStart="@drawable/ic_mobile"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="18sp"
        android:maxLength="10"
        android:inputType="phone"
        android:layout_margin="8dp"
        />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_theme"
        android:padding="4dp"
        android:hint="@string/enter_your_password"
        android:drawableStart="@drawable/ic_password"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:layout_margin="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:textSize="20sp"
            android:fontFamily="@font/give_you_glory"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_margin="5dp"
            android:background="@drawable/button_theme"
            />

        <Button
            android:id="@+id/btnsignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:fontFamily="@font/give_you_glory"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_margin="5dp"
            android:background="@drawable/button_theme"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tvforgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:gravity="center"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="15sp"
        android:layout_margin="8dp"/>

</LinearLayout>