<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        />
    <LinearLayout
        android:id="@+id/llregister"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/black">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_theme"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:hint="@string/name_min_3_characters"
        android:textSize="18sp"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/ic_person"
        android:padding="4dp"/>
    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_theme"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:hint="@string/e_mail_adress"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_email"
        android:padding="4dp"/>
    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_theme"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:hint="@string/mobile_number_10_digits"
        android:maxLength="10"
        android:textSize="18sp"
        android:inputType="number"
        android:drawableStart="@drawable/ic_mobile"
        android:padding="4dp"/>
    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_theme"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:hint="@string/delivery_address"
        android:textSize="18sp"
        android:inputType="text"
        android:drawableStart="@drawable/ic_address"
        android:padding="4dp"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_theme"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:hint="@string/create_password_min_4_characters"
        android:inputType="textVisiblePassword"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_password"
        android:padding="4dp"/>
    <EditText
        android:id="@+id/etConfPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_theme"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_password"
        android:padding="4dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_theme"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="Register"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:fontFamily="@font/give_you_glory"
        android:textStyle="bold"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progressbarlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bhure_tamatar"
        android:visibility="invisible"
        >
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:text="Setting you up ...."
        android:layout_below="@id/progressbar"
        android:textSize="16sp"
        android:textAlignment="center"/>

    </RelativeLayout>

</RelativeLayout>