<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Forgot1Fragment"
    android:background="@android:color/black"
    android:orientation="vertical">

    <RelativeLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/progressbarlayout">

        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/tvOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Setting you up"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/pb"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="14dp"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/logo2" />

    <EditText
        android:id="@+id/etOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_theme"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:hint="@string/enter_otp"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_key"
        android:padding="4dp"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_theme"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:hint="@string/create_password_min_4_characters"
        android:inputType="textVisiblePassword"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_password"
        android:padding="4dp"/>
    <EditText
        android:id="@+id/etConfPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_theme"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_password"
        android:padding="4dp"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="20sp"
        android:fontFamily="@font/give_you_glory"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_theme"
        android:padding="5dp"
        android:layout_gravity="center"
        />

</LinearLayout>